# gnulinux-scleaner

./: .gitignore  64Bits  Annonce_beta.txt  CHANGELOG  COPYRIGHT  Changelog  INSTALL  Makefile  README  README.md  Readme_David  Rules  TODO  ameliorations1.txt  backup.sh  changelog  cscope.sh  description  format.sh  interface-autosave.pjd  interface-autosave.pjd.bak  interface.pjd  interface.pjd.bak  interfaceapp.cpp  interfaceapp.h  libpuzzle-0.9.tar.bz2  lines_count.sh  maininterface.cpp  maininterface.h  notes  packaging.deb  poulpe  produce_test.sh  scleaner.dox  scleaner.vpj  scleaner.vpw  scleaner.vpwhistu  scleaner.vtg  scleaner_fr.dox  set_svn_pro.sh  (+1 more)
src/: .gitignore  CMakeLists.txt  about.html  config.h  config.h.cmake  control  def.h  dependencies.txt  fr.mo  fr.po  fr_tr.po  header  homepage.h  i8n.sh  i8n.txt  insert_svnprop.sh  sclean.cpp  sclean_wx.cpp  sclean_wx.h  scleaner.1  scleaner.desktop  scleaner.pot  scleaner_fr.po  scleaner_wx.cpp  scleaner_wx.h  sudo_scleaner.desktop  update_build.sh  us.po
src/cmake/: FindAPT.cmake
src/engine/: CMakeLists.txt  database.c  dpkg-db.h  dpkg.h  engine.cpp  engine.h  iprogress.h  settings_manager.cpp  settings_manager.h
src/fr/: scleaner.mo
src/gfx/: README  config.xpm  empty.xpm  exit.xpm  exit_fr.xpm  folder-add.xpm  folder-del.xpm  folder.xpm  full.xpm  menu_about.xpm  menu_add_folder.xpm  menu_del_folder.xpm  menu_prefs.xpm  plugin.xpm  preferences.xpm  prefs.xpm  run.xpm  run_fr.xpm  scan.xpm  scan_fr.xpm  scleaner.xpm  scleaner_root.xpm  select.xcf  select.xpm  select_fr.xpm  splash  stop.xpm
src/html/: about.html  about_fr.html
src/interface/: CMakeLists.txt  TreeMultiItemNode.cpp  TreeMultiItemNode.h  aboutdialog.cpp  aboutdialog.h  checklistctrl.cpp  checklistctrl.h  checktreectrl.cpp  checktreectrl.h  disclaimer.cpp  disclaimer.h  main.cpp  main.h  maininterface.cpp  maininterface.cpp2  maininterface.h  notif.cpp  notif.h  preferences.cpp  preferences.h  result_checklistctrl.cpp  result_checklistctrl.h  review.cpp  review.h  select_dialog.cpp  select_dialog.h  systeminfos.cpp  systeminfos.h  tmcimages.h  tray.cpp  tray.h  wxTreeMultiCtrl.cpp  wxTreeMultiCtrl.h  wxTreeMultiEvent.cpp
src/interface/morgue/: checklistctrl.cpp  checklistctrl.h  checktreectrl.h  main.cpp  main.h  maininterface.h2
src/leak/: CMakeLists.txt  leak_detector.h  memory_manager.cpp  memory_manager.h
src/log/: CMakeLists.txt  filelog.cpp  filelog.h  ilog.cpp  ilog.h  log.cpp  log.h
src/morgue/: .gitignore  TarConvert.cpp  aboutdialog.cpp  aboutdialog.h  checktreectrl.cpp  checktreectrl.h  sclean.cpp  tar.c  testtar.cpp
src/plugins/: CMakeLists.txt  README  by_folder_plugin.h  in_plugin.h  inplugin_initializer.h  iplugin.h  out_plugin.h  outplugin_initializer.h  plugin.h  plugin_initializer.h  plugin_manager.cpp  plugin_manager.h  root_plugin.h  thread_in_plugin.h
src/plugins/dpkg/: CMakeLists.txt  dpkg.cpp  dpkg.h
src/plugins/in/: CMakeLists.txt  in_plugin.h  in_plugin_initializer.h  inplugin_initializer.h  input_plugin.h  thread_in_plugin.h  thread_plugin.h  threadinplugin_initializer.h
src/plugins/in/apt-cache/: CMakeLists.txt  apt-cache.cpp  apt-cache.h
src/plugins/in/backfiles/: CMakeLists.txt  backfiles.cpp  backfiles.h  backfiles.html  backfiles_fr.html
src/plugins/in/backupextensions/: CMakeLists.txt  backupextensions.cpp  backupextensions.h
src/plugins/in/backupfolder/: CMakeLists.txt  backupfolder.cpp  backupfolder.h
src/plugins/in/coders/: CMakeLists.txt  coders.cpp  coders.h
src/plugins/in/coredump/: CMakeLists.txt  coredump.cpp  coredump.h
src/plugins/in/crimosoft/: CMakeLists.txt  crimosoft.cpp  crimosoft.h
src/plugins/in/emptyfolders/: CMakeLists.txt  emptyfolders.cpp  emptyfolders.h
src/plugins/in/iso/: CMakeLists.txt  iso.cpp  iso.h
src/plugins/in/kernels/: CMakeLists.txt  kernels.cpp  kernels.h  kernels.html  kernels_fr.html
src/plugins/in/latex/: CMakeLists.txt  latex.cpp  latex.h
src/plugins/in/logs/: CMakeLists.txt  logs.cpp  logs.h  logs.html  logs_fr.html
src/plugins/in/mac/: CMakeLists.txt  mac.cpp  mac.h
src/plugins/in/nullfiles/: CMakeLists.txt  nullfiles.cpp  nullfiles.h  nullfiles.html  nullfiles_fr.html
src/plugins/in/nullfolders/: CMakeLists.txt  nullfolders.cpp  nullfolders.h  nullfolders.html  nullfolders_fr.html
src/plugins/in/orphan/: CMakeLists.txt  orphan.cpp  orphan.h
src/plugins/in/popularity-contest/: popularity-contest.h
src/plugins/in/repos/: CMakeLists.txt  repos.cpp  repos.h
src/plugins/in/thumbnails/: CMakeLists.txt  thumbnails.cpp  thumbnails.h
src/plugins/in/trash/: CMakeLists.txt  trash.cpp  trash.h
src/plugins/in/wma/: CMakeLists.txt  wma.cpp  wma.h
src/plugins/kern/: CMakeLists.txt  kern.cpp  kern.h
src/plugins/kernels/: kern.cpp  kern.h  kernels.cpp  kernels.h
src/plugins/logs/: logs.cpp  logs.h
src/plugins/orphan/: orphan.cpp  orphan.h
src/plugins/popularity-contest/: CMakeLists.txt  popularity-contest.cpp  popularity-contest.h
src/test/: Makefile  test_exception.cpp  test_thread  test_thread.cpp  thread.cpp  thread.h
src/tools/: CMakeLists.txt  Makefile  Makefile_Tar  Makefile_Threads  TarConvert.cpp  crc.cpp  crc.h  mutex.cpp  mutex.h  name.cpp  name.h  singleton.h  smart_pointer.h  string.h  tar_archive.cpp  tar_archive.h  tarlib.cpp  tarlib.h  testbz.cpp  testtar.cpp  testtarlib  testtarlib.cpp  testthread.cpp  thread.cpp  thread.h  timer.cpp  timer.h  types.h
wxTreeMultiCtrl_v111/: CMakeLists.txt  README  Readme.txt  changes.txt  treemultictrl.done.xml  treemultictrl.xml
wxTreeMultiCtrl_v111/contrib/: CMakeLists.txt
wxTreeMultiCtrl_v111/contrib/samples/treemultictrl/: CMakeLists.txt  MultiCtrlTest.cpp  MultiCtrlTest.exe.manifest  MultiCtrlTest.rc  mondrian.xpm
wxTreeMultiCtrl_v111/contrib/src/treemultictrl/: CMakeLists.txt  TreeMultiItemBase.cpp  TreeMultiItemNode.cpp  tmcimages.h  (+6 more)
wxTreeMultiCtrl_v111/doc/: Doxyfile.in  treemultictrl.done.xml  treemultictrl.xml
wxTreeMultiCtrl_v111/doc/research/: test.xml
wxTreeMultiCtrl_v111/docs/: Doxyfile
wxTreeMultiCtrl_v111/patches/: treemultictrl_hartwig.rar
(+80 files in other folders)
