SET(emptyfolders_src emptyfolders.cpp)
ADD_LIBRARY(emptyfolders SHARED ${emptyfolders_src}) 
TARGET_LINK_LIBRARIES(emptyfolders plugins tools)
INSTALL(TARGETS emptyfolders DESTINATION ${PLUGSDIR}/ PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/plugins/in/emptyfolders/emptyfolders.html DESTINATION ${SHAREDIR}/ PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/plugins/in/emptyfolders/emptyfolders_fr.html DESTINATION ${SHAREDIR}/ PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
